--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@ Node scss is preprocessor for scss
     background-color: rgb(255, 255, 255);
 }
 
+// maing box of webpage
 .mainParent {
     height: 100vh;
     width: 100vw;
@@ -16,7 +17,7 @@ Node scss is preprocessor for scss
     // align-items: center;
 }
 
-
+// purple heading
 .headingBox {
     background-color: purple;
     height: 20vh;
@@ -35,6 +36,7 @@ Node scss is preprocessor for scss
     // margin: 2rem;
 }
 
+// input section
 .inputBoxMain {
     display: flex;
     justify-content: center;
@@ -78,6 +80,7 @@ Node scss is preprocessor for scss
     }
 }
 
+// word display section
 .navlinkCustom {
     text-decoration: none;
     color: rgb(180, 0, 180);
@@ -85,11 +88,13 @@ Node scss is preprocessor for scss
 }
 
 .infoSection {
+    // content center
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+// meaning main section
 .meaningMain {
     display: grid;
     justify-content: space-around;
@@ -119,6 +124,7 @@ Node scss is preprocessor for scss
     margin-bottom: 1rem;
 }
 
+// phonetics Maing section
 .phoneticsMain {
     display: grid;
     justify-content: space-around;
@@ -150,6 +156,7 @@ Node scss is preprocessor for scss
     margin-top: 5rem;
 }
 
+// media quires
 @media (max-width:500px) {
     .headingBox {
         height: 15vh;
